--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,9 @@ body {
   padding-top: 94px;
   padding-bottom: 50px;
 }
+.filter .list:last-child {
+  margin-right: 0px;
+}
 .filter-button {
   font-size: 16px;
   font-family: inherit;
@@ -326,9 +329,11 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 94px;
+  padding-left: 0;
 }
 .element-card {
   width: 370px;
+
   margin-right: 30px;
   margin-bottom: 30px;
   background-color: var(--main-home-color);
