--- a/css/styles.css
+++ b/css/styles.css
@@ -70,10 +70,6 @@ body {
   margin: 0;
 }
 
-/* .main-header {
-  display: flex;
-  align-items: center;
-} */
 .header {
   border-bottom: 1px solid var(--line-border-color);
 }
@@ -92,6 +88,9 @@ body {
 }
 .menu > .site-nav .link {
   display: block;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
   padding-top: 32px;
   padding-bottom: 32px;
 }
@@ -110,6 +109,9 @@ body {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .header-logo {
@@ -126,9 +128,6 @@ body {
   color: var(--button-hero-color);
 }
 
-.item {
-  letter-spacing: 0.02em;
-}
 .item:hover,
 .item:focus {
   color: var(--button-hero-color);
@@ -144,32 +143,43 @@ body {
 .current {
   color: var(--button-hero-color);
 }
-.current:hover,
-.current:focus {
-  color: var(--title-text-color);
-}
 .mail:hover,
 .mail:focus {
   color: var(--button-hero-color);
 }
-.hero-head {
+.section {
+  padding: 94px 0;
+}
+.container {
+  width: 1200px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hero-head > .container {
   /*width: 1600px;
   height: 600px;*/
   padding-top: 200px;
   padding-bottom: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.hero-head {
   background: var(--title-studio-color);
   color: var(--main-home-color);
 }
-.head-content {
-  margin: auto;
-  width: 696px;
-  display: flex;
-}
 .title-studio {
-  display: flex;
+  display: inline-block;
   text-align: center;
+  font-weight: 900;
+  width: 696px;
+  margin: 0 auto;
   font-size: 44px;
-  line-height: 1.4;
+  line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   margin-bottom: 30px;
@@ -180,8 +190,9 @@ body {
   font-family: inherit;
   display: block;
   margin: auto;
+  font-weight: 700;
   font-size: 16px;
-  line-height: 1.9;
+  line-height: 1.87;
   letter-spacing: 0.06em;
   padding: 10px 32px;
   border-radius: 4px;
@@ -192,17 +203,6 @@ body {
   background-color: var(--button-hero-activ);
 }
 
-.container {
-  width: 1200px;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.feature {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
 .feature > .container > .feature-list {
   display: flex;
 }
@@ -236,7 +236,7 @@ body {
   overflow: hidden;
 }
 .description {
-  padding-bottom: 94px;
+  padding-top: 0;
 }
 .title-desc {
   font-size: 36px;
@@ -259,8 +259,6 @@ body {
   height: auto;
 }
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
   background-color: var(--section-team-background);
 }
 .proper-team {
@@ -273,14 +271,21 @@ body {
 }
 .proff {
   font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 00.03em;
 }
 .proper-team .list:not(:last-child) {
   margin-right: 30px;
 }
 .team-person {
   font-size: 16px;
-  padding-bottom: 10px;
+  font-weight: 500;
+  margin-bottom: 10px;
+  line-height: 1.19;
+  letter-spacing: 00.03em;
+  text-align: center;
 }
+
 .team-content {
   padding: 30px 32px;
 }
@@ -302,6 +307,7 @@ body {
   line-height: 1.7;
   font-style: normal;
 }
+
 .address-design .list:not(:last-child) {
   margin-bottom: 9px;
 }
@@ -309,24 +315,17 @@ body {
 .contact {
   color: var(--main-home-color);
 }
+
 .meil-tel {
   color: var(--footer-color-contact);
 }
 
-.address-design {
-  margin: 0;
-  padding: 0;
-}
-
 /* Portfolio */
 
-.portfolio {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
 .filter {
   display: flex;
   justify-content: center;
+  margin-bottom: 50px;
 }
 
 .filter .list:not(:last-child) {
@@ -355,14 +354,12 @@ body {
   background-color: var(--button-hero-color);
   color: var(--main-home-color);
 }
-.portfolio .filter:first-of-type {
-  margin-bottom: 50px;
-}
+
 .info {
   padding: 20px 24px;
   border-right: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
+  border-bottom: 1px solid var(--card-border-color);
 }
 
 .title-project {
@@ -373,28 +370,28 @@ body {
   letter-spacing: 0.06em;
   margin-bottom: 4px;
 }
+
 .kind-project {
   color: var(--main-text-color);
   font-size: 16px;
   line-height: 1.9;
-  display: inline-block;
-  margin: 0;
 }
 
 .flex-card {
   display: flex;
   flex-wrap: wrap;
 }
+
 .element-card {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-  background-color: var(--main-home-color);
-  border: 1px solid var(--card-border-color);
 }
+
 .element-card:nth-child(3n) {
   margin-right: 0;
 }
+
 .element-card:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
